--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -280,6 +280,12 @@
     <string name="custom_textures_description">Textures are loaded from load/textures/[Title ID]/.</string>
     <string name="preload_textures">Preload Custom Textures</string>
     <string name="preload_textures_description">Loads all custom textures into memory. This feature can use a lot of memory.</string>
+    <string name="aspect_ratio">Aspect ratio</string>
+    <string name="ratio_default">Default (16:9)</string>
+    <string name="ratio_four_three">4:3</string>
+    <string name="ratio_twenty_one_nine">21:9 (Ultra Wide)</string>  
+    <string name="ratio_sixteen_ten">16:10</string>
+    <string name="ratio_stretch">Stretch to fit window</string>
     <string name="async_custom_loading">Async Custom Texture Loading</string>
     <string name="async_custom_loading_description">Load custom textures asynchronously with background threads to reduce loading stutter.</string>
 
