--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -338,6 +338,7 @@
     <!-- Preferences Screen -->
     <string name="preferences_settings">Settings</string>
     <string name="preferences_general">General</string>
+    <string name="preferences_general_description">speed limit, sustained perf</string>
     <string name="preferences_system">System</string>
     <string name="preferences_system_description">Region, language, country</string>
     <string name="preferences_camera">Camera</string>
