--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -273,6 +273,8 @@
     <string name="use_shader_jit">Shader JIT</string>
     <string name="use_disk_shader_cache">Disk Shader Cache</string>
     <string name="use_disk_shader_cache_description">Reduce stuttering by storing and loading generated shaders to disk. It cannot be used without Enabling Hardware Shader.</string>
+    <string name="force_max_gpu_clocks">Force Maximum GPU Clocks (Adreno Only)</string>
+    <string name="force_max_gpu_clocks_description">Forces the GPU to run at its maximum possible clock speed (May cause excessive heating and power usage)</string>
     <string name="utility">Utility</string>
     <string name="dump_textures">Dump Textures</string>
     <string name="dump_textures_description">Textures are dumped to dump/textures/[Title ID]/.</string>
