Android: Translate added options to spanish
I'll translate for PC as well as long as I see how trasfirex works

--- a/src/android/app/src/main/res/values-es/strings.xml
+++ b/src/android/app/src/main/res/values-es/strings.xml
@@ -197,18 +197,34 @@ Se esperan fallos gráficos temporales cuando ésta esté activado.</string>
     <string name="renderer_debug_description">Archiva información adicional gráfica relacionada con la depuración. Cuando está activada, el rendimiento de los juegos será reducido considerablemente</string>
     <string name="vsync">Activar Sincronización Vertical</string>
     <string name="vsync_description">Sincroniza los cuadros por segundo del juego con la tasa de refresco de tu dispositivo.</string>
+    <string name="reduce_downcount_slice">Reducir Rebanada de Downcount</string>
+    <string name="reduce_downcount_slice_description">Reduce el downcount de la sincronización del núcleo a una rebanada de tiempo más pequeña, reduciendo el uso de la CPU. Esto puede mejorar el rendimiento en juegos que demandan mucho de la GPU, pero si el juego demanda mucho de la CPU, puede causar una disminución en el rendimiento.</string>
+    <string name="priority_boost_starved_threads">Aumentar Prioridad de Hilos Hambrientos</string>
+    <string name="priority_boost_starved_threads_description">Aumenta la prioridad de los hilos de baja prioridad hambrientos durante la reprogramación del kernel. Esto puede mejorar el rendimiento.</string>
     <string name="linear_filtering">Filtro Linear</string>
     <string name="linear_filtering_description">Activa el filtro linear, que hace que los gráficos del juego se vean más suaves.</string>
     <string name="texture_filter_name">Filtro de Texturas</string>
     <string name="texture_filter_description">Mejora los gráficos visuales de los juegos al aplicar un filtro a las texturas. Los filtros soportados son Anime4K Ultrafast, Bicubic, ScaleForce, y xBRZ freescale.</string>
     <string name="delay_render_thread">Retrasa el hilo de dibujado del juego</string>
     <string name="delay_render_thread_description">Retrasa el hilo de dibujado del juego cuando envía datos a la GPU. Ayuda con problemas de rendimiento en los (muy pocos) juegos de fps dinámicos.</string>
+    <string name="tweaks">Trucos</string>
+    <string name="force_hw_vertex_shaders">Forzar Sombras de Vértices de Hardware</string>
+    <string name="force_hw_vertex_shaders_description">Ignora las sombras de vértices de software del núcleo PICA. Habilitar esto puede llevar a un pequeño aumento en el rendimiento, pero también puede causar errores gráficos.</string>
+    <string name="disable_surface_texture_copy">Deshabilitar Copia de Textura de Superficie</string>
+    <string name="disable_surface_texture_copy_description">Ignora las copias de texturas si src_surface_id es nulo. Habilitar esto puede llevar a un pequeño aumento en el rendimiento, pero también puede causar errores gráficos.</string>
+    <string name="disable_flush_cpu_write">Deshabilitar Vaciamiento de Escritura de CPU</string>
+    <string name="disable_flush_cpu_write_description">Ignora la escritura de la CPU si hay una región que invalidar del caché del rasterizador. Habilitar esto puede llevar a un pequeño aumento en el rendimiento, pero también puede causar errores gráficos.</string>
     <string name="hw_shaders">Activar Sombreador de Hardware</string>
     <string name="hw_shaders_description">Usa el hardware para emular los sombreadores de 3DS. Cuando se active, el rendimiento mejorará notablemente.</string>
     <string name="shaders_accurate_mul">Multiplicación Precisa</string>
     <string name="shaders_accurate_mul_description">Usa multiplicaciones más precisas en los sombreados de hardware, que podrían arreglar ciertos bugs gráficos. Cuando se active, el rendimiento se reducirá.</string>
     <string name="asynchronous_gpu">Activar Emulación Asíncrona de la GPU</string>
     <string name="asynchronous_gpu_description">Usa un hilo separado para emular la GPU de manera asíncrona. Cuando se active, el rendimiento mejorará.</string>
+    <string name="frame_skip_name">Salto de Fotogramas</string>
+    <string name="frame_skip_description">El número de fotogramas a saltar. Esto puede causar problemas de desincronización en la velocidad de emulación.</string>
+    <string name="enable_custom_cpu_ticks">Habilitar Ticks de CPU Personalizados</string>
+    <string name="enable_custom_cpu_ticks_description">Establece un valor personalizado de ticks de CPU. Valores más altos pueden aumentar el rendimiento, pero si son demasiado altos, pueden causar que el juego se congele. Se recomienda un rango de 77-21000.</string>
+    <string name="custom_cpu_ticks">Ticks</string>
     <string name="frame_limit_enable">Límite de velocidad</string>
     <string name="frame_limit_enable_description">Cuando se active, la velocidad de emulación estará limitada a un porcentaje determinado de la velocidad normal.</string>
     <string name="frame_limit_slider">Limitar porcentaje de velocidad</string>
