--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -172,6 +172,7 @@
     <!-- System settings strings -->
     <string name="username">Username</string>
     <string name="new_3ds">New 3DS Mode</string>
+    <string name="new_3ds_description">The New 3DS has different memory and processor, and some games can only start on the New 3DS.</string>
     <string name="lle_applets">Use LLE Applets (if installed)</string>
     <string name="clock">Clock</string>
     <string name="init_time">Offset Time</string>
@@ -236,6 +237,8 @@
     <string name="shaders_accurate_mul_description">Uses more accurate multiplication in hardware shaders, which may fix some graphical bugs. When enabled, performance will be reduced.</string>
     <string name="asynchronous_gpu">Enable asynchronous GPU emulation</string>
     <string name="asynchronous_gpu_description">Uses a separate thread to emulate the GPU asynchronously. When enabled, performance will be improved.</string>
+    <string name="frame_skip_name">Frame Skip</string>
+    <string name="frame_skip_description">The number of frames to skip. It may cause emulation speed desync issues.</string>
     <string name="enable_custom_cpu_ticks">Enable Custom CPU Ticks</string>
     <string name="enable_custom_cpu_ticks_description">Set a custom value of CPU ticks. Higher values can increase performance but if they\'re too high, it may cause the game to freeze. A range of 77-21000 is recommended.</string>
     <string name="custom_cpu_ticks">Ticks</string>
@@ -562,6 +565,12 @@
     <string name="scaleforce">ScaleForce</string>
     <string name="xbrz">xBRZ</string>
     <string name="mmpx">MMPX</string>
+
+    <!-- Frame skip names -->
+    <string name="disabled">Disabled</string>
+    <string name="x2">x2</string>
+    <string name="x4">x4</string>
+    <string name="x8">x8</string>
 
     <!-- Sound output modes -->
     <string name="mono">Mono</string>
