--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -52,13 +52,13 @@
     <string name="copied_to_clipboard">Copied to clipboard</string>
     <string name="contributors">Contributors</string>
     <string name="contributors_description">Made with \u2764 from the Mandarine team</string>
-    <string name="contributors_link">https://github.com/mandarine3ds/mandarine/graphs/contributors</string>
+    <string name="contributors_link" translatable="false">https://github.com/mandarine3ds/mandarine/graphs/contributors</string>
     <string name="licenses_description">Projects that make Mandarine for Android possible</string>
     <string name="build">Build</string>
     <string name="licenses">Licenses</string>
-    <string name="support_link">https://discord.gg/FAXfZV9</string>
-    <string name="website_link">https://citra-emu.org/</string>
-    <string name="github_link">https://github.com/mandarine3ds</string>
+    <string name="support_link" translatable="false">https://discord.gg/8xjMHWEuf6</string>
+    <string name="website_link" translatable="false">https://citra-emu.org/</string>
+    <string name="github_link" translatable="false">https://github.com/mandarine3ds</string>
 
     <!-- Setup strings -->
     <string name="welcome">Welcome!</string>
