--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -246,7 +246,7 @@
     <string name="asynchronous_gpu">Enable asynchronous GPU emulation</string>
     <string name="asynchronous_gpu_description">Uses a separate thread to emulate the GPU asynchronously. When enabled, performance will be improved.</string>
     <string name="expand_to_cutout_area">Expand to Cutout Area</string>
-    <string name="expand_to_cutout_area_description">Expands the display area to include the cutout (or notch) area.</string>
+    <string name="expand_to_cutout_area_description">Expands the display area to include the cutout (or notch) area while gaming on landscape layout.</string>
     <string name="frame_skip">Frame Skip</string>
     <string name="frame_skip_description">The number of frames to skip. It may cause emulation speed desync issues.</string>
     <string name="enable_custom_cpu_ticks">Enable Custom CPU Ticks</string>
