--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -30,7 +30,6 @@
     <string name="select_games_folder">Select Games Folder</string>
     <string name="select_games_folder_description">Allows Mandarine to populate the games list</string>
     <string name="about">About</string>
-    <string name="mandarine_description">An open-source 3DS emulator</string>
     <string name="about_description">Build version, credits, and more</string>
     <string name="games_dir_selected">Games directory selected</string>
     <string name="select_mandarine_user_folder_home_description">Changes the files that Mandarine uses to load games</string>
@@ -50,8 +49,9 @@
 
     <!-- About screen strings -->
     <string name="copied_to_clipboard">Copied to clipboard</string>
-    <string name="contributors">Contributors</string>
-    <string name="contributors_description">Made with \u2764 from the Mandarine team</string>
+    <string name="mandarine_description">An open-source 3DS emulator based on Citra</string>
+    <string name="contributors">Credits</string>
+    <string name="contributors_description">Contributors who made Mandarine possible</string>
     <string name="contributors_link" translatable="false">https://github.com/mandarine3ds/mandarine/graphs/contributors</string>
     <string name="licenses_description">Projects that make Mandarine for Android possible</string>
     <string name="build">Build</string>
