Add possibly to input a custom room name at creation
Instead of always using the IP Address as the name, now the user can put it anything they want as a room name similarly to the qt version

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -835,5 +835,7 @@
     <string name="multiplayer_password">Password</string>
     <string name="original_button_text">Join</string>
     <string name="disabled_button_text">Joining...</string>
+    <string name="multiplayer_room_name">Room Name</string>
+    <string name="multiplayer_room_name_invalid">Room name must be between 3 and 20 characters</string>
 
 </resources>
