Hide kick button if the host isnt a mod
Rework the kick user button into a context menu

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -840,6 +840,6 @@
     <string name="multiplayer_max_players">Max Players (16)</string>
     <string name="multiplayer_max_players_value">Max Players: %d</string>
     <string name="multiplayer_chat">Chat</string>
-
+    <string name="multiplayer_more_options">More Options</string>
 
 </resources>
