Add chat dialog

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -825,8 +825,8 @@
     <string name="multiplayer_room_joining">Room joining</string>
     <string name="multiplayer_room_joined">Room joined</string>
     <string name="multiplayer_room_moderator">Room moderator</string>
-    <string name="multiplayer_member_join">%1$s join</string>
-    <string name="multiplayer_member_leave">%1$s leave</string>
+    <string name="multiplayer_member_join">%1$s joined</string>
+    <string name="multiplayer_member_leave">%1$s left</string>
     <string name="multiplayer_member_kicked">%1$s kicked</string>
     <string name="multiplayer_member_banned">%1$s banned</string>
     <string name="multiplayer_address_unbanned">address unbanned</string>
@@ -844,5 +844,9 @@
     <string name="multiplayer_copy_ip">Copy IP Address</string>
     <string name="multiplayer_ip_copied">IP Address copied to clipboard</string>
     <string name="multiplayer_server_address">Server Address</string>
+    <string name="chat">Chat</string>
+    <string name="type_message">Type message……</string>
+    <string name="send">Send</string>
+    <string name="send_message">Send Message</string>
 
 </resources>
