--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -27,8 +27,14 @@
     <string name="custom_driver_not_supported">Custom drivers not supported</string>
     <string name="custom_driver_not_supported_description">Custom driver loading isn\'t currently supported for this device.\nCheck this option again in the future to see if support was added!</string>
     <string name="share_log_not_found">No log file found</string>
-    <string name="select_games_folder">Select Games Folder</string>
-    <string name="select_games_folder_description">Allows Mandarine to populate the games list</string>
+    <string name="search_location">Search Locations</string>
+    <string name="delete_search_location">Delete this search location</string>
+    <string name="add">Add</string>
+    <string name="add_search_location">Add a search location</string>
+    <string name="search_locations_count">%1$s search location%2$s selected</string>
+    <string name="search_location_add_success">Search location added successfully</string>
+    <string name="search_location_delete_success">Search location deleted successfully</string>
+    <string name="search_location_duplicated">Search location already added</string>
     <string name="about">About</string>
     <string name="about_description">Build version, credits, and more</string>
     <string name="games_dir_selected">Games directory selected</string>
