--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="build">Build</string>
     <string name="licenses">Licenses</string>
     <string name="support_link" translatable="false">https://discord.gg/8xjMHWEuf6</string>
-    <string name="website_link" translatable="false">https://citra-emu.org/</string>
+    <string name="website_link" translatable="false">https://mandarine3ds.github.io/</string>
     <string name="github_link" translatable="false">https://github.com/mandarine3ds</string>
 
     <!-- Setup strings -->
