android: Make shortcut name and icon customizable
Adds ability to customize game shortcuts with:
- Custom name input
- Editable icon via image picker
- Dedicated shortcut creation dialog

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -485,6 +485,10 @@
     <!-- About Game Dialog -->
     <string name="play">Play</string>
     <string name="shortcut">Shortcut</string>
+    <string name="shortcut_name">Shortcut Name</string>
+    <string name="edit_icon">Edit icon</string>
+    <string name="create_shortcut">Create Shortcut</string>
+    <string name="shortcut_name_empty">Shortcut name cannot be empty</string>
 
     <!-- Cheats -->
     <string name="cheats">Cheats</string>
