--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -72,6 +72,10 @@
     <string name="notifications">Notifications</string>
     <string name="notifications_description">Grant the notification permission with the button below.</string>
     <string name="give_permission">Grant permission</string>
+    <string name="permissions">Permissions</string>
+    <string name="permissions_description">Grant optional permissions to use specific features of the emulator</string>
+    <string name="select_emulalator_data_folder">Emulator Data Folders</string>
+    <string name="select_emulalator_data_folder_description">Select emulator data folders (User folder is required)</string>
     <string name="notification_warning">Skip granting the notification permission?</string>
     <string name="notification_warning_description">Mandarine won\'t be able to notify you of important information.</string>
     <string name="camera_permission">Camera</string>
@@ -80,7 +84,7 @@
     <string name="microphone_permission_description">Grant the microphone permission below to emulate the 3DS microphone.</string>
     <string name="permission_denied">Permission denied</string>
     <string name="add_games_warning">Skip selecting games folder?</string>
-    <string name="add_games_warning_description">Games won\'t be displayed in the Games list if a folder isn\'t selected.</string>
+    <string name="add_games_warning_description">External Roms won\'t be displayed in the Games list if a folder isn\'t selected.</string>
     <string name="add_games_warning_help">https://citra-emu.org/wiki/dumping-game-cartridges/</string>
     <string name="warning_help">Help</string>
     <string name="warning_skip">Skip</string>
@@ -88,7 +92,7 @@
     <string name="select_mandarine_user_folder">Select User Folder</string>
     <string name="select_mandarine_user_folder_description"><![CDATA[Select your <a href="https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage">user data</a> directory with the button below.]]></string>
     <string name="select">Select</string>
-    <string name="cannot_skip">You can\'t skip this step</string>
+    <string name="cannot_skip">You can\'t skip setting the user folder</string>
     <string name="cannot_skip_directory_description">This step is required to allow Mandarine to work. Please select a directory and then you can continue.</string>
     <string name="cannot_skip_directory_help">https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage</string>
 
@@ -897,5 +901,4 @@
     <string name="multiplayer_unban_message">Are you sure you want to unban %1$s?</string>
     <string name="multiplayer_ban">Ban User</string>
     <string name="_0">0%</string>
-
 </resources>
