--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -244,6 +244,8 @@
     <string name="delay_render_thread">Delay game render thread</string>
     <string name="delay_render_thread_description">Delay the game render thread when it submits data to the GPU. Helps with performance issues in the (very few) dynamic-fps games.</string>
     <string name="tweaks">Tweaks</string>
+    <string name="disable_right_eye_render">Disable Right Eye Render</string>
+    <string name="disable_right_eye_render_desc">Greatly improves performance in some games, but can cause flickering in others.</string>
     <string name="force_hw_vertex_shaders">Force Hardware Vertex Shaders</string>
     <string name="force_hw_vertex_shaders_description">Ignores software vertex shaders from PICA core. Enable this may lead a small performance boost, but may cause graphical bugs as well.</string>
     <string name="disable_surface_texture_copy">Disable Surface Texture Copy</string>
